<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin1"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.itafuta.SearchActivity">
    
    <LinearLayout
        android:id="@+id/mSearch_buttonfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/empty_check_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="Search item..."
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty" />
        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="3"-->
            <!--android:hint="@string/search"-->
            <!--android:gravity="center_vertical"/>-->
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:src="@android:drawable/ic_menu_search"
            android:text="@string/search"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/mSearch_spinnerfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mSearch_buttonfield"
        android:background="@color/colorPrimary">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="All"
            android:background="@color/colorTheme"/>
        
        <Spinner
            android:id="@+id/spinnerCategories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/categories_list"
            android:prompt="@string/prompt_category"
            android:backgroundTint="@color/colorAccent"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
            >
        </Spinner>

        <Spinner
            android:id="@+id/spinnerPlaces"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/zone_list"
            android:prompt="@string/prompt_zone"
            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
        </Spinner>
        
    </LinearLayout>


</RelativeLayout>
